testsuite/tests/typecheck/should_fail/tcfail134.hs
-- Class used as a type, recursively

module ShouldFail where

class XML a where toXML :: a -> XML